Fixed build issue.